# MCP-agentes-portables-modulares-4108143

Intro/: components.ipynb  pyproject.toml  requirements.txt  test.py
calculator/: main.py  pyproject.toml  server.py  test.ipynb
challenge/: README.md  pyproject.toml
challenge/client/: Dockerfile  requirements.txt
challenge/client/static/: chat.html
challenge/server.py/: Dockerfile
chat_app/: Dockerfile.client  client_openai.py  main.py  pyproject.toml  sample.env  task_pilot_server.py
chat_bot/: client_openai.py  pyproject.toml  servers_config.json  task_pilot_server.py
chat_bot/data/: tasks.json
concepts/: Dockerfile.client  Dockerfile.server  README.md  README_AZURE.md  client_demo.py  client_llm.py  client_llm_best_practices.py  client_openai.py  concepts.ipynb  logging.ipynb  main.py  mcp_client.py  mcp_vs_fc.md  pyproject.toml  requirements.txt  sample.env  task_pilot_server.py  test.ipynb
concepts/data/: tasks.json
