[project]
name = "chat-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "azure-identity>=1.25.1",
    "azure-storage-blob>=12.27.0",
    "fastapi>=0.119.0",
    "mcp>=1.17.0",
    "openai>=2.3.0",
    "pydantic>=2.12.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.37.0",
]
