[project]
name = "concepts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "any>=0.0.2",
    "azure-identity>=1.25.1",
    "ipykernel>=6.30.1",
    "logging>=0.4.9.6",
    "mcp[cli]>=1.17.0",
    "openai>=2.3.0",
    "python-dotenv>=1.1.1",
]
