[project]
name = "concepts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "any>=0.0.2",
    "azure-identity>=1.25.1",
    "azure-storage-blob>=12.27.0",
    "botbuilder-core>=4.17.0",
    "botbuilder-schema>=4.17.0",
    "fastapi>=0.119.0",
    "ipykernel>=6.30.1",
    "logging>=0.4.9.6",
    "mcp[cli]>=1.17.0",
    "openai>=2.3.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.37.0",
]
